--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
   "name": "wti-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "better-sqlite3": "^12.2.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "bcryptjs": "^2",
+    "better-sqlite3": "^9",
+    "cookie-parser": "^1",
+    "cors": "^2",
+    "express": "^4",
+    "jsonwebtoken": "^9"
   }
 }
